k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${name}
  name: ${name}
spec:
  type: ClusterIP
  selector:
    app: ${name}
  ports:
  - name: http
    port: ${port}
    protocol: TCP
    targetPort: ${port}
